<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nomophobia</string>
    <string name="you_lasted">You lasted</string>
    <string name="since_your_last_phone_check">since checking your phone</string>
    <string name="addiction_overview">Addiction Overview</string>
    <string name="you_checked_your_phone">You have checked your phone</string>
    <string name="times">times</string>
    <string name="in_the_last_timeperiod" formatted="false">in the last %s</string>
    <string name="with_an_average_time_between_checking_of">with an average time between checks of</string>
    <string name="graph_title">Graph of Phone Addiction</string>
    <string name="share_via">Share via</string>
    <string name="share_message" formatted="false">Nomophobia stats: checked phone %s  in the last %s with an average time between checks of %s play.google.com/store/apps/details?id=com.hannah.nomophobia</string>
    <string name="about">About</string>
    <string name="hannah_text">Developed by Hannah Mittelstaedt</string>
    <string name="noah_text">Designed by Noah Brown</string>
    <string name="email">Email</string>
    <string name="nomophobia_caps">NOMOPHOBIA</string>
    <string name="the_fear_of_being_out_of_mobile_contact">:the fear of being out of mobile contact.</string>
    <string name="you_last_an_average_of">You last an average of</string>
    <string name="between_checks">between checks</string>
    <string name="statistics">Stats</string>
    <string name="graph">Graph</string>
    <string name="graph_of_phone_addiction">Graph of Phone Addiction</string>
    <string name="the_longest_you_have_gone_is">The longest you have gone is</string>
    <string name="without_checking">without checking</string>
    <string name="hrs_ago">%s hrs ago</string>

</resources>